// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSuperUpdateButton is rendered 1`] = `
<EuiToolTip
  delay="regular"
  position="bottom"
>
  <EuiButton
    className="euiSuperUpdateButton"
    color="primary"
    fill={true}
    iconType="refresh"
    isDisabled={false}
    isLoading={false}
    onClick={[Function]}
    textProps={
      Object {
        "className": "euiSuperUpdateButton__text",
      }
    }
  >
    Refresh
  </EuiButton>
</EuiToolTip>
`;

exports[`EuiSuperUpdateButton isDisabled 1`] = `
<EuiToolTip
  content="Cannot update"
  delay="regular"
  position="bottom"
>
  <EuiButton
    className="euiSuperUpdateButton"
    color="primary"
    fill={true}
    iconType="refresh"
    isDisabled={true}
    isLoading={false}
    onClick={[Function]}
    textProps={
      Object {
        "className": "euiSuperUpdateButton__text",
      }
    }
  >
    Refresh
  </EuiButton>
</EuiToolTip>
`;

exports[`EuiSuperUpdateButton isLoading 1`] = `
<EuiToolTip
  delay="regular"
  position="bottom"
>
  <EuiButton
    className="euiSuperUpdateButton"
    color="secondary"
    fill={true}
    iconType="kqlFunction"
    isDisabled={false}
    isLoading={true}
    onClick={[Function]}
    textProps={
      Object {
        "className": "euiSuperUpdateButton__text",
      }
    }
  >
    Updating
  </EuiButton>
</EuiToolTip>
`;

exports[`EuiSuperUpdateButton needsUpdate 1`] = `
<EuiToolTip
  content="Click to apply"
  delay="regular"
  position="bottom"
>
  <EuiButton
    className="euiSuperUpdateButton"
    color="secondary"
    fill={true}
    iconType="kqlFunction"
    isDisabled={false}
    isLoading={false}
    onClick={[Function]}
    textProps={
      Object {
        "className": "euiSuperUpdateButton__text",
      }
    }
  >
    Update
  </EuiButton>
</EuiToolTip>
`;
